gitops/recriando-chatgpt/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recriando-chatgpt
  namespace: recriando-chatgpt
spec:
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
  selector:
    matchLabels:
      app: recriando-chatgpt
  template:
    metadata:
      labels:
        app: recriando-chatgpt
    spec:
      containers:
      - name: recriando-chatgpt
        image: viniciusfca/recriando-chatgpt:v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 2Gi
            cpu: 2048m
        livenessProbe:
          httpGet:
            port: 3000
            path: /
          failureThreshold: 10
          initialDelaySeconds: 70
        startupProbe:
          httpGet:
            path: /
            port: 3000
          failureThreshold: 10
          initialDelaySeconds: 70
        readinessProbe:
          httpGet:
            port: 3000
            path: /
          failureThreshold: 10
          initialDelaySeconds: 70
